# GeneticAlgorithm

./: CMakeLists.txt  Chromosome.cpp  Chromosome.py  Chromosome_binary.cpp  chromosome.h  main.cpp  population.cpp  population.h  random_weight.cpp
Chromosome/: Chromosome.cpp  Chromosome.h  Chromosome_binary.cpp  Chromosome_binary.h  chromosome.h  functions.cpp  functions.h
GAPython/: Chromosome.py  Population.py  TSP.py  TSP_real.py  tcp_test.py
Population/: Populaton.cpp  Populaton.h  population.cpp  population.h
